[package]
edition = "2021"
name = "stardust-xr"
version = "0.9.1"

[features]
default = ["fusion"]
fusion = []

[dependencies]
anyhow = "1.0.57"
buildstructor = "0.5.0"
cluFlock = "1.2.7"
color-rs = "0.7.1"
dashmap = "5.3.4"
erased_set = "0.7.0"
flagset = "0.4.3"
flatbuffers = "2.1.2"
flexbuffers = "2.0.0"
futures = { version = "0.3.24", features = ["executor"] }
glam = { version = "0.21.3", features = ["mint"] }
mint = "0.5.9"
nanoid = "0.4.0"
once_cell = "1.12.0"
ouroboros = "0.15.4"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
schemas = {path = "schemas"}
slotmap = "1.0.6"
thiserror = "1.0.31"
tokio = { version = "1", features = ["sync", "macros", "rt", "time", "net", "io-util", "signal"] }
uds = "0.2.6"
xdg = "2.4.1"
xkbcommon = { version = "0.5.0", default-features = false }

[dev-dependencies]
glam = {version = "0.21.3", features = ["mint"]}
manifest-dir-macros = "0.1.16"
