[package]
edition = "2024"
name = "stardust-xr"
version = "0.45.0"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Base library for the Stardust XR display server"
license = "MIT"
repository = "https://github.com/StardustXR/stardust-xr/"
homepage = "https://stardustxr.org"

[dependencies]
nix = { version = "0.27.1", features = ["socket", "uio", "fs"] }
serde = { version = "1.0.196", features = ["derive"] }
rustc-hash = "2.0.0"
thiserror = "2.0.16"
tokio = { version = "1.38.0", features = [
	"sync",
	"macros",
	"net",
	"io-util",
	"rt",
	"parking_lot",
] }
tracing = "0.1.40"
dirs = "6.0.0"
global_counter = "0.2.2"

# values
color-eyre = "0.6.2"
shiva-color-rs = "0.0.1"
mint = { version = "0.5.9", features = ["serde"] }

stardust-xr-schemas = { path = "../schemas" }
