[package]
edition = "2024"
rust-version = "1.85"
name = "stardust-xr-fusion"
version = "0.45.0"
authors = ["Nova King <technobaboo@proton.me>"]
description = "High level client library for the Stardust XR display server"
license = "MIT"
repository = "https://github.com/StardustXR/stardust-xr/"
homepage = "https://stardustxr.org"

[features]
default = []
keymap = ["dep:xkbcommon"]

[dependencies]
glam = { version = "0.30.0", features = ["mint"] }
global_counter = "=0.2.2"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
serde = "1.0.177"
serde_repr = "0.1.16"
thiserror = "1.0.38"
tokio = { version = "1", features = [
	"sync",
	"macros",
	"rt",
	"time",
	"net",
	"io-util",
	"signal",
] }
xkbcommon = { version = "0.5.1", default-features = false, optional = true }
tracing = "0.1.37"
color-eyre = "0.6.2"
zbus = "5.0.0"

stardust-xr = { path = "../core" }
stardust-xr-fusion-codegen = { path = "codegen" }
split-iter = "0.1.0"
dashmap = "6.1.0"

[dev-dependencies]
tracing-subscriber = "0.3.17"
