[package]
edition = "2024"
rust-version = "1.85"
name = "stardust-xr-fusion"
version = "0.45.0"
authors = ["Nova King <technobaboo@proton.me>"]
description = "High level client library for the Stardust XR display server"
license = "MIT"
repository = "https://github.com/StardustXR/stardust-xr/"
homepage = "https://stardustxr.org"

[features]
default = []
keymap = ["dep:xkbcommon"]

[dependencies]
glam = { version = "0.30.0", features = ["mint"] }
global_counter = "=0.2.2"
parking_lot = "0.12.1"
rustc-hash = "2.1.1"
serde = "1.0.177"
serde_repr = "0.1.16"
thiserror = "2.0.16"
tokio = { version = "1", features = [
	"sync",
	"macros",
	"rt",
	"time",
	"net",
	"io-util",
	"signal",
] }
xkbcommon = { version = "0.9.0", default-features = false, optional = true }
tracing = "0.1.37"
zbus = { version = "5.11.0", features = ["tokio"], default-features = false }
stardust-xr = { path = "../core" }
dashmap = "6.1.0"

[build-dependencies]
convert_case = "0.8.0"
quote = "1.0.33"
stardust-xr-schemas = { path = "../schemas" }
proc-macro2 = "1.0.71"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
syn = "2.0.106"
prettyplease = "0.2.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"
