[package]
edition = "2024"
name = "stardust-xr-gluon"
authors = ["Nova King <technobaboo@protonmail.me", "Philpax"]
description = "D-Bus object-based (rather than service-based) crate for Stardust XR, built off zbus"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "sync", "macros", "time"] }
tokio-stream = "0.1.17"
zbus = { version = "5.11.0", features = [
	"blocking-api",
	"tokio",
], default-features = false }
nanoid = "0.4.0"
variadics_please = "1.1.0"
futures = "0.3.31"
